Added more values in config
